--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # These are supported funding
-custom: ["https://blockchain.com/btc/payment_request?address=1Lv6V1DXprnG1U4Mg4JZWQzpKB7VT6Zi4d&amount=0.00012112&message=SPONSOR" , camgirl resources]
+custom: ["https://cgc-dan.github.io/cgc-designers/sponsor.html" , camgirl.cloud]
